# 2025-P1-Topic-detection

./: .gitignore  README.md  cleaner.py  duplicate_remover.py  evaluation.py  main.py  pyproject.toml  requirements.txt  sentiment_analyzer.py  topic_modeler.py  translation.py
data/: dataFramNewNeutral (1).xlsx  dataset_v1.xlsx  dataset_v2.xlsx  reviews_cleaned_translated.xlsx  taxonomy.xlsx  taxonomy_v2.xlsx
future_work/: cleaner2.py  main2.py  topic_model.py
legacy/: cleaner.py  duplicateanalysis.py
notebooks/: EDA_and_pre_processing.ipynb  Exploratory_Data_Analysis.ipynb  duplicateAnalysis.ipynb  sentimentAnalysis.ipynb  sentimentanalysis.py
preprocessing/: cleaner.py
